--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.formatting.provider": "black",
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3.8"
 }
